--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@ body {
     <li>LANGUAGE-ENGLISH,HINDI,KANADDA</li>
 </ul>
 <br>
+<CENTER><h2>BASIC INFO</h2></CENTER>
+<table border="2" align="center">
+        <tr>    <td>Age:</td><td>19</td></tr> 
+        <tr>  <td>Email:</td><td>nnm22cs051@gmail.com</td></tr> 
+            <tr></tr><td>Address:</td><td>ABHYUDAYA HOUSE,UDUPI</td></tr> 
+            <tr>   <td>Contact:</td><td>7483137415</td></tr> 
+           <tr> <td>Language:</td><td>ENGLISH,HINDI,KANADDA,KONKANI,TULU</td>
+          </tr>
+        </table>
 <h2>EDUCATION QUALIFICATION</h2>
 <ul>
 <li>
